--- a/scorm-builder/web-ui/views/index.ejs
+++ b/scorm-builder/web-ui/views/index.ejs
@@ -440,6 +440,7 @@
 
     <script src="/js/form-handler.js"></script>
     <script src="/js/image-upload.js"></script>
+    <script src="/js/video-upload.js"></script>
 
     <script>
         // Add this function to handle preview - UPDATED
